--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
       <button onclick="nextCard()" class="btn white"> > </button>
     </div>
     <div style="justify-content: left; text-align:left;" class="progress-container">
-      <progress id="progress"></progress>
+      <progress id="progress" style="width: 100%;"></progress>
     </div>
   </div>
-  <footer style="bottom: 0; width: 100%; text-align: center; position:fixed; margin-bottom: 1%;">Copyright © 2024 Giuca002 All Rights
+  <footer class="mobileShow" style="bottom: 0; width: 100%; text-align: center; position:fixed; margin-bottom: 1%;">Copyright © 2024 Giuca002 All Rights
     Reserved</footer>
   <script src="logic.js"></script>  
 
