--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 
   <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#ffffff">
+
+  <meta name="apple-mobile-web-app-title" content="Open Card">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-capable" content="yes">\
+  <meta name="mobile-web-app-capable" content="yes">
+
+  <link rel="apple-touch-icon" href="./opencard.png">
+  <link rel="apple-touch-startup-image" href="./opencard.png">
+
 </head>
 
 <body>
