--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <title>OpenCard</title>
 
   <link rel="manifest" href="/manifest.json">
-  <meta name="theme-color" content="#ffffff">
+  <meta name="theme-color" content="#fcfafa">
+  <link rel="icon" type="image/png" href="./opencard.png" />
 
   <meta name="apple-mobile-web-app-title" content="Open Card">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
