--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <meta name="apple-mobile-web-app-title" content="Open Card">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-capable" content="yes">\
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
 
   <link rel="apple-touch-icon" href="./opencard.png">
