--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
 
-  <link rel="apple-touch-icon" href="./opencard.png">
-  <link rel="apple-touch-startup-image" href="./opencard.png">
+  <link rel="apple-touch-icon" href="opencard.png">
+  <link rel="apple-touch-startup-image" href="opencard.png">
 
 </head>
 
