--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <button class="btn white" onclick="alert('Coming soon')"> New Set </button>
       <button class="btn white" onclick="alert('Coming soon')"> Edit Set </button>
       
-      <label onclick="openModal()" class="btn white">Load Set</label>
+      <label id="loadbtn" onclick="openModal()" class="btn white">Load Set</label>
       <input name="Load Set" id="inputbox" type="file" onchange="loadFileAsText()">
 
       <button class="btn white" onclick="alert('Coming soon')"> Theme </button>
