--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </tr>
                 <tr>
                     <td>Use your own set...</td>
-                    <td><label for="inputbox" class="btn white">Upload</label></td>
+                    <td><label for="inputbox" class="btn2 white">Upload</label></td>
                 </tr>
             </table>
           </div>
